# calculus

./: CMakeLists.txt  README.md  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  ressources.qrc  score.h  timeLimit.h
assets/: style.qss
include/: game.h  mainwindow.h
src/: game.cpp  main.cpp  mainwindow.cpp
